# clypi

./: .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
about/planned_work/: index.html
about/why/: index.html
api/: index.html
api/cli/: index.html
api/colors/: index.html
api/components/: index.html
api/config/: index.html
api/parsers/: index.html
api/prompts/: index.html
clypi/: __init__.py  _autocomplete.py  _boxed.py  _cli.py  _colors.py  _exceptions.py  _formatter.py  _prompts.py  _util.py  align.py  boxed.py  cli.py  colors.py  configuration.py  parsers.py  prompts.py  spinner.py  spinners.py  stack.py  wraps.py
clypi/_cli/: arg_config.py  config.py  (+5 more)
docs/: api.md  index.md  planned_work.md  tutorial.md
examples/: animations.py  basic_cli.py  boxed.py  cli.py  cli_deferred.py  cli_forwarded.py  cli_inherited.py  cli_negative_flags.py  colors.py  prompt.py  prompting.py  prompts.py  spinner.py  validations.py
mdtest/: README.md  __main__.py
packaging/: index.html
planned_work/: index.html
scripts/: gen_readme  mdtest.py  publish_docs
search/: search_index.json
term/: __init__.py  boxed.py  cli.py  colors.py  input.py  klasses.py  prompts.py  spinner.py  stack.py  term.py  validations.py
tests/: cli_defer_test.py  cli_forward_test.py  cli_hooks_test.py  cli_inherited_test.py  cli_parse_test.py  cli_test.py  distance_test.py  parsers_test.py  stack_test.py  term_test.py
tutorial/: index.html
type_tests/: cli_test.py  prompt_test.py
(+35 files in other folders)
